# bevy_wordle_viz

./: Cargo.toml  README.md
assets/: floor.glb
src/: main.rs  native_clipboard.rs  wasm_clipboard.rs  wordle.rs
