[package]
name = "bevy_wordle_viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"

web-sys = { version = "*", features = ["Element", "Document", "Window", "Clipboard", "ClipboardEvent", "DataTransfer"] }
wasm-bindgen = "*"
gloo-events = "0.1"

futures = "0.3"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
