[package]
name = "bevy_wordle_viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_easings = "0.11"
thiserror = "1.0"
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clipboard = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = ["Element", "Document", "Window", "Clipboard", "ClipboardEvent", "DataTransfer"] }
wasm-bindgen = "*"
gloo-events = "0.1"
futures = "0.3"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3